--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
   "dependencies": {
     "@material-ui/core": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "cookie": "^0.4.1",
     "firebase": "^8.2.3",
     "firebase-admin": "^9.4.2",
     "next": "10.0.5",
-    "next-firebase-auth": "^0.11.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-scroll": "^1.8.1"
