--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cookie": "^0.4.1",
     "firebase": "^8.2.3",
     "firebase-admin": "^9.4.2",
+    "framer-motion": "^3.3.0",
     "next": "10.0.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
