--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "framer-motion": "^3.3.0",
     "next": "10.0.5",
     "react": "17.0.1",
+    "react-beautiful-dnd": "^13.0.0",
     "react-dom": "17.0.1",
     "react-scroll": "^1.8.1"
   }
