--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "cookie": "^0.4.1",
+    "cors": "^2.8.5",
     "firebase": "^8.2.3",
     "firebase-admin": "^9.4.2",
     "framer-motion": "^3.3.0",
